--- a/paper/sab_hte_paper_draft_1.qmd
+++ b/paper/sab_hte_paper_draft_1.qmd
@@ -35,10 +35,10 @@ csl: vancouver.csl
 # Uncomment ONE of the lines below corresponding to your environment.
 
 # For remote server execution:
-setwd("/user/work/fh6520/sab_het/paper")
+# setwd("/user/work/fh6520/sab_het/paper")
 
 # For local execution (update this path to your machine):
- #setwd("/Users/fh6520/R/sab_het/paper")
+ setwd("/Users/fh6520/R/sab_het/paper")
 
 
 # Load necessary packages for reporting
@@ -142,22 +142,27 @@ plot_aim2_wrong_dir <- aim2_plots[[3]]
 summary_aim3 <- read_tsv("../results/tables/aim3_sens_spec_summary.tsv")
 plot_aim3_nns <- readRDS("../results/objects/aim3_plot.rds")
 
+# Load the new combined Aim 3 results
+aim3_combined_summary <- readRDS("../results/objects/aim3_combined_summary.rds")
+aim3_combined_gt_table <- readRDS("../results/objects/aim3_combined_gt_table.rds")
+aim3_nns_comparison_plot <- readRDS("../results/objects/aim3_nns_comparison_plot.rds")
+aim3_nnr_comparison_plot <- readRDS("../results/objects/aim3_nnr_comparison_plot.rds")
+aim3_bias_comparison_plot <- readRDS("../results/objects/aim3_bias_comparison_plot.rds")
+
+# Load the full combined data for exploration
+aim3_combined_data <- readRDS("../results/objects/aim3_combined_data.rds")
+
 n_fixed_aim2 <- 10000 # Manually define for use in captions
 alpha_bonferroni <- 0.05 / 5
 ```
 
 ### Aim 1: Sample Size Requirements (Post-Hoc Analysis Power)
 
-The statistical power for detecting subgroup-specific treatment effects in a standard two-arm RCT, assuming perfect classification, was highly dependent on the subgroup's prevalence, baseline event rate, and the magnitude of the true odds ratio (OR). The results, summarized in `Table tbl-aim1-table-power` and `Figure fig-aim1-plot-power`, demonstrate that substantial total trial sizes are necessary to achieve 80% power in post-hoc analyses, even under these ideal conditions.
-
-For subgroups with strong treatment effects, the sample size requirements were more modest. For instance, to detect the strong protective effect in Subgroup E (OR = 0.3), a total trial size of approximately 2,500 patients was required. Similarly, for the large harmful effect in Subgroup B (OR = 18.8), a trial size of around 5,000 was needed, with the larger requirement being driven by the very low baseline event rate.
-
-In contrast, for subgroups with more moderate effects, the required sample sizes increased significantly. Subgroup D (OR = 1.4) required over 20,000 participants to reach 80% power. For Subgroup C (OR = 0.79), which has a similar effect magnitude to Subgroup E but a higher baseline risk, the required sample size was still large at around 15,000 participants. As expected, for the null Subgroup A (OR = 1.0), power remained flat at the Bonferroni-corrected alpha level of 1% across all tested sample sizes. These findings establish a crucial baseline: even without the challenge of misclassification, post-hoc HTE analyses demand very large clinical trials.
-
 ```{r aim1_results}
 #| label: tbl-aim1-table-power
 #| tbl-cap: "Aim 1: Power for Post-Hoc Subgroup Analysis vs. Total Trial Size (ARREST ORs, Perfect Classification)"
 power_aim1 %>%
+  filter(group != "A") %>%
   mutate(power = scales::percent(power, accuracy = 1)) %>%
   pivot_wider(names_from = group, values_from = power) %>%
   gt() %>%
@@ -166,146 +171,199 @@ power_aim1 %>%
 
 #| label: fig-aim1-plot-power
 #| fig-cap: "Aim 1: Power for Post-Hoc Subgroup Analysis vs. Total Trial Size (ARREST ORs)"
-plot_aim1 +
- ggtitle("")
+plot_aim1$data <- plot_aim1$data %>% filter(group != "A")
+plot_aim1 + ggtitle("")
 ```
 
 ### Aim 2: Impact of Classification Accuracy (Post-Hoc Analysis)
 
-We then investigated the impact of imperfect classification accuracy on power, bias, and error rates in a fixed, large trial of 10,000 participants. The results clearly show that decreasing accuracy has a profoundly negative and multifaceted impact on the reliability of post-hoc subgroup analyses.
-
-**Power:** As shown in `Figure fig-aim2-plot-power`, statistical power to detect true effects diminished substantially as classification accuracy decreased. For subgroups B and E, which had nearly 100% power with perfect accuracy, power fell dramatically. For example, in Subgroup E, power dropped to below 70% when accuracy fell to 90%, and to less than 20% with 70% accuracy. This illustrates that even a small degree of misclassification can render a large trial underpowered for its subgroup objectives.
-
-**Bias:** Classification accuracy had a direct impact on the estimation bias, as seen in `Figure fig-aim2-plot-bias`. For all subgroups with a true effect (B, C, D, and E), the estimated OR was consistently biased towards the null value of 1.0 as accuracy worsened. This "dilution" effect occurs because misclassifying patients mixes individuals from subgroups with different true effects, pulling the observed estimate towards the population average. For example, the powerful harmful effect in Subgroup B (OR=18.8) was severely attenuated, with the estimated OR falling below 5.0 when accuracy dropped to 80%.
-
-**Wrong Direction Rate:** Perhaps most critically, the probability of estimating an effect in the wrong direction (a Type S error) increased as accuracy fell (`Figure fig-aim2-plot-wrong-direction`). This was most pronounced for subgroups with true effects close to the null. For the 'Conservative' scenario, where the true ORs are closer to 1.0, the wrong-direction rate for Subgroup E was approximately 30% even with perfect 100% accuracy, a consequence of the low event rate and modest effect size. This error rate climbed to over 40% as accuracy declined to 70%. This demonstrates that misclassification not only reduces the chance of finding a true effect but also significantly increases the risk of drawing a completely incorrect and potentially harmful conclusion.
-
 ```{r aim2_results}
 #| label: tbl-aim2-table-summary
 #| tbl-cap: "Aim 2: Post-Hoc Analysis Summary vs. Accuracy (ARREST ORs, Total N = 10,000)"
-summary_aim2 %>%
-  select(group, accuracy, Power = power, Bias = bias, MSE = mse, `Wrong Dir %` = wrong_dir) %>%
-  gt(groupname_col = "group") %>%
-  fmt_percent(columns = Power, decimals = 1) %>%
-  fmt_number(columns = c(Bias, MSE), decimals = 2) %>%
-  fmt_percent(columns = `Wrong Dir %`, scale_values = FALSE, decimals = 1) %>%
-  cols_label(accuracy = "Accuracy") %>%
-  tab_options(row_group.font.weight = "bold")
+# Create two summary tables, one for each scenario, and stack them vertically with clear labels
 
+library(gt)
+
+# Helper function to format the summary table for a given scenario, excluding group A
+format_aim2_table_long <- function(df, scenario_label) {
+  # Only keep groups B-E
+  df %>%
+    filter(group %in% c("B", "C", "D", "E")) %>%
+    select(group, accuracy, Power = power, Bias = bias, MSE = mse, `Wrong Dir %` = wrong_dir) %>%
+    pivot_longer(
+      cols = c(Power, Bias, MSE, `Wrong Dir %`),
+      names_to = "Metric",
+      values_to = "Value"
+    ) %>%
+    mutate(
+      Metric = factor(Metric, levels = c("Power", "Bias", "MSE", "Wrong Dir %")),
+      group = factor(group, levels = c("B", "C", "D", "E"))
+    ) %>%
+    arrange(group, Metric, accuracy) %>%
+    unite("Group_Metric", group, Metric, sep = " ") %>%
+    pivot_wider(
+      names_from = Group_Metric,
+      values_from = Value
+    ) %>%
+    gt() %>%
+    # Format columns by metric type
+    fmt_percent(
+      columns = matches("Power$"),
+      decimals = 1
+    ) %>%
+    fmt_number(
+      columns = matches("Bias$"),
+      decimals = 2
+    ) %>%
+    fmt_number(
+      columns = matches("MSE$"),
+      decimals = 2
+    ) %>%
+    fmt_percent(
+      columns = matches("Wrong Dir %$"),
+      scale_values = FALSE,
+      decimals = 1
+    ) %>%
+    # Custom column labels for clarity
+    cols_label(
+      accuracy = "Accuracy",
+      `B Power` = "B Power", `B Bias` = "B Bias", `B MSE` = "B MSE", `B Wrong Dir %` = "B Wrong Dir %",
+      `C Power` = "C Power", `C Bias` = "C Bias", `C MSE` = "C MSE", `C Wrong Dir %` = "C Wrong Dir %",
+      `D Power` = "D Power", `D Bias` = "D Bias", `D MSE` = "D MSE", `D Wrong Dir %` = "D Wrong Dir %",
+      `E Power` = "E Power", `E Bias` = "E Bias", `E MSE` = "E MSE", `E Wrong Dir %` = "E Wrong Dir %"
+    ) %>%
+    tab_header(title = md(paste0("**", scenario_label, " Scenario**"))) %>%
+    tab_options(table.width = "100%")
+}
+
+# Filter and format for ARREST scenario, excluding group A
+tbl_aim2_arrest <- summary_aim2 %>%
+  filter(scenario_name == "ARREST") %>%
+  format_aim2_table_long("ARREST")
+
+# Filter and format for Conservative scenario, excluding group A
+tbl_aim2_conservative <- summary_aim2 %>%
+  filter(scenario_name == "Conservative") %>%
+  format_aim2_table_long("Conservative")
+
+# Display both tables stacked vertically
+tbl_aim2_arrest
+tbl_aim2_conservative
 
 #| label: fig-aim2-plot-power
 #| fig-cap: "Aim 2: Post-Hoc Analysis Power vs Classification Accuracy (ARREST ORs, N = 10,000)"
 
 plot_aim2_power <- summary_aim2 %>%
-filter(group != "Overall") %>%
-ggplot(aes(x = accuracy, y = power, color = group)) +
-geom_line() + geom_point() + facet_wrap(~ scenario_name) + labs(title="Aim 2: Power vs. Accuracy")
+  filter(group != "Overall", group != "A") %>%
+  ggplot(aes(x = accuracy, y = power, color = group)) +
+  geom_line() + 
+  geom_point() + 
+  facet_wrap(~ scenario_name) + 
+  labs(title = "Aim 2: Power vs. Accuracy") +
+  geom_hline(yintercept = 0.8, linetype = "dashed") +
 
-    plot_aim2_power + scale_y_log10()
+plot_aim2_power 
             
 
 #| label: fig-aim2-plot-bias
 #| fig-cap: "Aim 2: Post-Hoc Estimation Bias vs Classification Accuracy (ARREST ORs, N = 10,000)"
 
+library(patchwork)
 
+# ARREST scenario plot (title included, legend at bottom)
+plot_aim2_bias_a <- ggplot(
+  summary_aim2 %>% filter(group != "Overall", group != "A", scenario_name == "ARREST"),
+  aes(x = accuracy, y = bias, color = group)
+) +
+  geom_line() + geom_point() +
+  facet_wrap(~ group, scales = "free_y") +
+  labs(title = "ARREST Scenario", x = "Accuracy", y = "Bias") +
+  geom_hline(yintercept = 0, linetype = "dashed") +
+  theme(legend.position = "bottom",
+        strip.text = element_text())
 
-plot_aim2_bias_a <- ggplot(summary_aim2 %>% filter(group != "Overall" & scenario_name == "ARREST"), aes(x = accuracy, y = bias, color = group)) + geom_line() + geom_point() + facet_wrap(scenario_name ~ group, scales="free_y") + labs(title="Aim 2: Bias vs. Accuracy") + 
-geom_hline(yintercept = 0, linetype = "dashed")
+# Conservative scenario plot (title included, legend at bottom)
+plot_aim2_bias_c <- ggplot(
+  summary_aim2 %>% filter(group != "Overall", group != "A", scenario_name == "Conservative"),
+  aes(x = accuracy, y = bias, color = group)
+) +
+  geom_line() + geom_point() +
+  facet_wrap(~ group, scales = "free_y") +
+  labs(title = "Conservative Scenario", x = "Accuracy", y = "Bias") +
+  geom_hline(yintercept = 0, linetype = "dashed") +
+  theme(legend.position = "bottom",
+        strip.text = element_text())
 
-
-
-plot_aim2_bias_c <- ggplot(summary_aim2 %>% filter(group != "Overall" & scenario_name == "Conservative"), aes(x = accuracy, y = bias, color = group)) + geom_line() + geom_point() + facet_wrap(scenario_name ~ group, scales="free_y") + labs(title="Aim 2: Bias vs. Accuracy") + 
-geom_hline(yintercept = 0, linetype = "dashed")
-
-plot_aim2_bias_a /plot_aim2_bias_c
-
+# Combine plots, share legend at bottom
+plot_aim2_bias_a / plot_aim2_bias_c & theme(legend.position = "bottom")
 
 #| label: fig-aim2-plot-wrong-direction
 #| fig-cap: "Aim 2: Post-Hoc Wrong Direction % vs Classification Accuracy (ARREST ORs, N = 10,000)"
-plot_aim2_wrong_dir + xlab("Accuracy")+ ylab("Wrong Direction %") + ggtitle("")
+plot_aim2_wrong_dir +
+  xlab("Accuracy") +
+  ylab("Wrong Direction %") +
+  ggtitle("") +
+  scale_color_manual(
+    values = scales::hue_pal()(length(unique(summary_aim2$group[summary_aim2$group != "Overall" & summary_aim2$group != "A"]))),
+    breaks = setdiff(unique(summary_aim2$group), c("Overall", "A"))
+  ) +
+  guides(color = guide_legend(override.aes = list(size = 3))) +
+  scale_x_continuous(breaks = unique(summary_aim2$accuracy)) +
+  scale_y_continuous(labels = scales::percent_format(scale = 1)) +
+  # Remove group A from the legend and plot
+  coord_cartesian(clip = "off") +
+  theme(legend.title = element_blank())
 ```
 
 ### Aim 3: Sample Size Requirements (Enrichment Trial Simulation)
 
+```{r aim3_data_exploration, echo=TRUE}
+#| label: tbl-aim3-data
+#| tbl-cap: "Aim 3: Combined Data for Exploration"
+
+# Display the full combined data for exploration
+aim3_combined_data %>%
+  filter(target_group %in% c("B", "C", "D", "E")) %>%
+  arrange(scenario_name, target_group, test_type_clean, data_source) %>%
+  select(scenario_name, test_type_clean, target_group, data_source, 
+         nns_needed, nnr_corresponding, bias, mse, rmse, wrong_direction,
+         true_beta, predicted_beta) %>%
+  head(20)  # Show first 20 rows
+```
+
 ```{r aim3_results}
-#| label: tbl-aim3-nns-summary
-#| tbl-cap: "Aim 3: Number Needed to Screen (NNS) and Corresponding Number Needed to Randomize (NNR) to achieve 80% power in an enrichment trial."
-summary_aim3 %>%
-  mutate(
-    `NNS` = if_else(is.na(nns_needed), paste(">", format(max(summary_aim3$nns_needed, na.rm=T), big.mark=",")), scales::comma(nns_needed)),
-    `NNR` = if_else(is.na(nnr_corresponding), "-", scales::comma(round(nnr_corresponding), 1))
-  ) %>%
-  select(Scenario = scenario_name, Subgroup = target_group, `Test Type`=test_type, NNS, NNR) %>%
-  arrange(Scenario, Subgroup) %>%
-  gt(groupname_col = "Scenario")
+#| label: tbl-aim3-combined-summary
+#| tbl-cap: "Aim 3: NNS, NNR, and Performance Metrics by Method and Test Type"
 
+# Display the comprehensive table
+aim3_combined_gt_table
 
-#| label: fig-aim3-plot-nns
-#| fig-cap: "Aim 3: Number Needed to Screen (NNS) vs. Test Accuracy for 80% Power"
+#| label: fig-aim3-nns-comparison
+#| fig-cap: "Aim 3: NNS Comparison - Simulation vs Closed Form Methods"
 
-# Plot NNS vs Accuracy
-# Exclude ">" values for plotting (where power goal wasn't met)
-plot_data_nns <- summary_aim3 %>%
-  filter(!is.na(nns_needed)) %>%
-  mutate(nns_numeric = as.numeric(nns_needed))
+# Display NNS comparison plot
+aim3_nns_comparison_plot
 
-ggplot(plot_data_nns, aes(x = test_type, y = nns_numeric, color = target_group, group = target_group)) +
-  geom_line() +
-  geom_point(size = 3) +
-  facet_grid(scenario_name ~ target_group, scales = "free_y") +
-  scale_y_log10(labels = scales::comma) +
-  labs(
-    x = "Test Type",
-    y = "Number Needed to Screen (NNS) (log scale)",
-    color = "Target Subgroup"
-  ) +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "none")
+#| label: fig-aim3-nnr-comparison  
+#| fig-cap: "Aim 3: NNR Comparison - Simulation vs Closed Form Methods"
 
+# Display NNR comparison plot
+aim3_nnr_comparison_plot
 
-# Plot NNR vs Accuracy
-# Exclude "-" values for plotting
-plot_data_nnr <- summary_aim3 %>%
-  filter(!is.na(nnr_corresponding)) %>%
-  mutate(nnr_numeric = as.numeric(nnr_corresponding))
+#| label: fig-aim3-bias-comparison
+#| fig-cap: "Aim 3: Bias by Test Type (Simulation Results Only)"
 
-ggplot(plot_data_nnr, aes(x = test_type, y = nnr_numeric, color = target_group, group = target_group)) +
-  geom_line() +
-  geom_point(size = 3) +
-  facet_grid(scenario_name ~ target_group, scales = "free_y") +
-  scale_y_log10(labels = scales::comma) +
-  labs(
-    x = "Test Type",
-    y = "Avg. Number Needed to Randomize (NNR) (log scale)",
-    color = "Target Subgroup"
-  ) +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "none")
+# Display bias comparison plot
+aim3_bias_comparison_plot
 ```
 
 # Discussion
 
-This simulation study demonstrates the significant challenges in detecting heterogeneous treatment effects in the presence of subgroup misclassification, using parameters derived from a real-world *S. aureus* bacteremia trial [@Swets2024].
-
 ### Strengths and Limitations
-
-A key strength of this study is its grounding in a real-world clinical problem, using parameters from a well-characterized cohort to ensure the data-generating mechanisms are as plausible as possible. The systematic, multi-aim structure, following the ADEMP framework, provides a comprehensive view of the problem from foundational power calculations to the practical implications for enrichment trial design.
-
-However, our study has several limitations inherent to any simulation work. Our misclassification model assumes that when an error occurs, the assigned subgroup is chosen randomly according to population prevalence. This represents a scenario where a diagnostic provides no information upon failure. In reality, misclassifications may not be random; for instance, two clinically similar subgroups may be more frequently confused for one another. A more complex model using a pre-defined confusion matrix could explore such scenarios, representing a potential avenue for future research.
-
-Furthermore, while the "Realistic Scenario" provides a valuable sensitivity analysis, the chosen moderate ORs are illustrative. The true extent of HTE in SAB is still unknown, and future work could explore a wider range of effect sizes to create a broader map of the statistical challenges. Finally, our simulations do not account for other real-world complexities such as variability in diagnostic accuracy across sites or over time.
-
-Aim 1 highlights that even with perfect classification, substantial sample sizes are required to achieve adequate power (80%) for **post-hoc subgroup analyses** within a standard trial randomizing the full population mix (@fig-aim1-plot-power). This is particularly true for less prevalent subgroups or those with smaller effect sizes, or where baseline event rates are low (even if the relative effect is large, as seen for subgroup B with the ARREST parameters). The need for multiple comparison adjustments (e.g., Bonferroni) further inflates sample size requirements for post-hoc analyses [@Wang2007].
-
-Aim 2 quantifies the detrimental impact of misclassification accuracy on these post-hoc analyses (@fig-aim2-plot-power, @fig-aim2-plot-bias, @fig-aim2-plot-wrong-direction). As accuracy decreases, statistical power diminishes substantially, bias in effect estimates increases (generally towards the overall null effect), and the probability of estimating effects in the wrong direction rises. This underscores the critical importance of highly accurate subgroup classification methods if relying on post-hoc analyses and aligns with broader concerns about the reliability of subgroup findings [@Pocock2007; Kent2018]. Subgroups with true null effects (like A) are particularly susceptible to high rates of "wrong direction" findings under misclassification.
 
 ### Practical Implications: Enrichment Trials
 
-Aim 3 simulates an **enrichment trial** design, where patients are screened using a test with a given `accuracy` (probability of correct classification), and only those testing positive for the target subgroup are randomized. This allows estimation of the Number Needed to Screen (NNS) and the average resulting Number Needed to Randomize (NNR<sub>Enrich</sub>) within the enriched cohort required to achieve 80% power.
-
-The results (@tbl-implications-table, @fig-aim3-plot-power, @fig-aim3-plot-nns) demonstrate the trade-offs inherent in enrichment designs [@Simon2004; Antoniou2016]. While potentially requiring fewer randomized patients (NNR) compared to the total N needed for post-hoc power (Aim 1), the screening burden (NNS) can be substantial and increases dramatically as test accuracy decreases. For example, achieving 80% power for subgroup B (OR=18.8) requires screening tens of thousands even with high accuracy, due to its prevalence and the corrected baseline risk. Lower accuracy inflates NNR (due to dilution by false positives) and NNS (due to lower yield). This highlights that the feasibility of enrichment trials depends critically on subgroup prevalence, effect size, and, crucially, the performance characteristics of the screening test [@Anthenelli2011; Wang2014]. Our simulations using more realistic ORs show lower, more achievable NNR/NNS values (see @tbl-implications-table-realistic and @fig-aim3-plot-nnr-nns-realistic), but the strong dependence on accuracy remains.
-
 ## Conclusion
-
-This simulation study underscores the importance of considering classification accuracy when interpreting subgroup analyses or planning trials aimed at detecting HTE in heterogeneous diseases like SAB. Post-hoc subgroup analyses require large sample sizes and high classification accuracy to yield reliable results. Enrichment trial designs offer potential efficiency gains in terms of randomized patients but necessitate careful evaluation of the screening burden, which is highly sensitive to test accuracy and subgroup prevalence. Developing and validating accurate methods for identifying SAB subphenotypes is crucial for advancing stratified medicine approaches in this field.
 
 ## References
 
